@@ -1,6 +1,5 @@
 package challenges;
 
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
@@ -11,6 +10,8 @@ public class forExamples {
         System.out.println(factorial(5));
         List<Integer> numbers = Arrays.asList(10, 25, 7, 42, 18, 3, 65, 23);
         System.out.println(findMayor(numbers));
+        sumDigit(222);
+        System.out.println(sumNumbers(222));
     }
 
     public static Integer factorial(int num) {
@@ -25,7 +26,7 @@ public class forExamples {
 
     public static Integer findMayor(List<Integer> numbers) {
 
-        Integer first = numbers.getFirst();
+        Integer first = numbers.get(0);
 
         for(int i = 1; i < numbers.size(); i++) {
             if(numbers.get(i) > first){
@@ -35,4 +36,25 @@ public class forExamples {
         return first;
     }
 
+    public static void sumDigit(int num) {
+        int sum = 0;
+
+        for(int temp = num; temp !=0; temp /= 10 ) {
+            int digit = temp % 10;
+            sum += digit;
+        }
+        System.out.println(sum);
+    }
+
+    public static Integer sumNumbers(int num) {
+        int total = 0;
+
+        List<Integer> listOfNumbers = Arrays.stream(String.valueOf(num).split("")).
+                map(Integer::parseInt).toList();
+
+        for (Integer n : listOfNumbers) {
+            total += n;
+        }
+        return total;
+    }
 }
